<resources>
    <string name="app_name">TechShop</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_cart">Cart</string>
    <string name="title_orders">Orders</string>
    <string name="title_process_order">Process order</string>
    <string name="title_product_info">Product info</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
</resources>
