<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.techshop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.techshop.ui.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.techshop.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.techshop.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_product_info"
        android:name="com.example.techshop.ui.product_info.ProductInfoFragment"
        android:label="@string/title_product_info"
        tools:layout="@layout/fragment_product_info" >
        <argument
            android:name="productId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/navigation_process_order"
        android:name="com.example.techshop.ui.process_order.ProcessOrderFragment"
        android:label="@string/title_process_order"
        tools:layout="@layout/fragment_process_order" />

</navigation>